<resources>
    <string name="app_name">ProyectoPDDM2021</string>
    <string name="correo_turista">Correo:</string>
    <string name="contrasena_turista">Contraseña:</string>
    <string name="texto_login_turista_1">Inicio de sesión</string>
    <string name="texto_login_turista_2">Iniciar sesión</string>
    <string name="texto_login_turista_3">Ingresar</string>
    <string name="texto_login_turista_4">Registrar</string>
    <string name="texto_registro_turista">Registrarse</string>
    <string name="texto_registro_turista_1">Nombre</string>
    <string name="texto_registro_turista_2">Apellido</string>
    <string name="texto_registro_turista_3">Teléfono</string>
    <string name="texto_registro_turista_4">Correo</string>
    <string name="texto_registro_turista_5">Contraseña</string>
    <string name="texto_registro_turista_6">Confirmar Contraseña</string>
    <string name="texto_registro_turista_7">Registrar</string>
    <string name="texto_registro_admin_1">Editar Lugar Turistico</string>
    <string name="texto_registro_admin_2">Lugar Turistico</string>
    <string name="texto_registro_admin_3">Descripcion</string>
    <string name="texto_registro_admin_4">Teléfono</string>
    <string name="texto_registro_admin_5">Servicios</string>
    <string name="texto_registro_admin_6">Ubicacion</string>
    <string name="btn_registro_admin_1">Guardar</string>
    <string name="turista_icon_name">Turista</string>
    <string name="lugar_icon_name">Lugar Turístico</string>
    <string name="txvRegistroAdmin">Registrar Lugar Turistico</string>
    <string name="txvCorreoAdmin">Correo</string>
    <string name="txvNombreLugarAdmin">Nombre del lugar</string>
    <string name="txvContraAdmin">Contraseña</string>
    <string name="txvConfirmarContraAdmin">Confirmar contraseña</string>
    <string name="txvTelefonoAdmin">Telefono</string>
    <string name="btnSiguienteAdmin">Siguiente</string>
    <string name="txvVersion">Versión: 7.0</string>
    <string name="txvV">V: 7.0</string>
    <string name="txvCreadores">Creadores de la App: </string>
    <string name="txvNombreCreador1">Tatiana </string>
    <string name="txvNombreCreador2">Ana </string>
    <string name="txvNombreCreador3">Eliseo </string>
    <string name="txvNombreCreador4">Vladimir </string>
    <string name="txvNombreCreador5">Carlos </string>
    <string name="txvCarreraCreador">Ingeniería en Sistemas </string>
    <string name="txvEditarPublicacion">Editar Publicación </string>
    <string name="btnEditar">Editar</string>
    <string name="info">Información</string>
    <string name="galeria">Galeria</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="nombreLugar">Lugar</string>
    <string name="ubicacion">Ubicación</string>
    <string name="Descripcion">Descripción</string>
    <string name="Telefono">Telefono</string>
    <string name="Servicios">Servicios</string>
    <string name="Categoria">Categoria</string>
    <string name="principal">Principal</string>
    <string name="MiPerfil">Mi Perfil</string>
    <string name="favs">Favoritos</string>
    <string name="info_app">Información de la App.</string>
    <string name="quit">Cerrar Sesión</string>
    <string name="share">Compartir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>