<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/principal">

        </item>
        <item android:id="@+id/nav_drawer1"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/MiPerfil">
        </item>
        <item android:id="@+id/nav_drawer2"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/favs">
        </item>
        <item android:id="@+id/nav_drawer3"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/info_app">
        </item>
        <item android:id="@+id/nav_drawer4"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/quit">
        </item>
        </group>


    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share">
        </item>
    </group>

</menu>