<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.PerfilLugarAdministradorActivity"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/categoria_lugares"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/TabLayoutTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabInformacionTurista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabGaleriaTurista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galeria"
            />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/TabPublicacionesTurista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publicaciones"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPagerTurista"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.viewpager.widget.ViewPager>



</LinearLayout>