<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegistrarTuristaActivity"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/tvTituloRegistrarseTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:text="@string/texto_registro_turista"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/themeNightPrimaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombreTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTituloRegistrarseTurista"
        app:layout_constraintVertical_bias="0.1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreTurista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutApellidoTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutNombreTurista"
        app:layout_constraintVertical_bias="0.15"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtApellidoTurista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTelefonoTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutApellidoTurista"
        app:layout_constraintVertical_bias="0.20"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTelefonoTurista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreoTuristaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutTelefonoTurista"
        app:layout_constraintVertical_bias="0.25"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCorreoTuristaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContrasenaTuristaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutCorreoTuristaRegistro"
        app:layout_constraintVertical_bias="0.3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtContrasenaTuristaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmarContrasenaTuristaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_turista_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutContrasenaTuristaRegistro"
        app:layout_constraintVertical_bias="0.4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmarContrasenaTuristaRegistro"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/themeNightPrimaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutConfirmarContrasenaTuristaRegistro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:text="@string/texto_registro_turista_7"
        android:textAllCaps="false"
        android:textSize="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>