<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".View.RegistrarLugarAdministradorActivity">

    <TextView
        android:id="@+id/tvTituloEditarAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txvRegistroAdmin"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/themeNightPrimaryColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNombreLugarAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txvNombreLugarAdmin"
        app:layout_constraintBottom_toBottomOf="@+id/layoutTelefonoAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloEditarAdmin"
        app:layout_constraintVertical_bias="0.1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNombreLugarAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreoAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txvCorreoAdmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNombreLugarAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.02"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCorreoAdmin"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutContraseniaAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txvContraAdmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCorreoAdmin"
        app:layout_constraintVertical_bias="0.03"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtContraseniaAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmarContraseniaAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txvConfirmarContraAdmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutContraseniaAdmin"
        app:layout_constraintVertical_bias="0.03"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmarContraseniaAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTelefonoAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txvTelefonoAdmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutConfirmarContraseniaAdmin"
        app:layout_constraintVertical_bias="0.03"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTelefonoLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18dp"/>


        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDescripcionRegistrarAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_registro_admin_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTelefonoAdmin"
        app:layout_constraintVertical_bias="0.03"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtDescripcionLugarAdmin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:textSize="18dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSigRegistrarLugarTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/themeNightPrimaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDescripcionRegistrarAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/btnSiguienteAdmin"
        android:textAllCaps="false"
        android:textSize="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>