<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginTuristaActivity"
    android:layout_margin="16dp"
    >

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo_usuario_dark"/>
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/texto_login_turista_1"
        android:textAlignment="center"
        app:layout_constraintVertical_bias="0.03"
        android:textSize="20sp"
        android:textColor="@color/themeNightPrimaryColor"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCorreoTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_turista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.02"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCorreoTurista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutContrasenaTurista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutCorreoTurista"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.25"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/contrasena_turista"
        android:textSize="18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtContrasenaUsuarioTurista"
            android:textSize="18dp"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIngresarTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/themeNightPrimaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutContrasenaTurista"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/texto_login_turista_3"
        android:textAllCaps="false"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnRegistrarUsuarioTurista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIngresarTurista"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:text="@string/texto_login_turista_4"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:backgroundTint="@color/themeNightPrimaryColor"/>


</androidx.constraintlayout.widget.ConstraintLayout>